--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,27 @@
-/* write your override styles here */
+#wall .tag-1{
+  display:none;
+}
+
+#wall .tag-1 + #tag-2{
+  display:none;  
+}
+
+#wall #tag-2 + div[class="slick wicked"][id="tag-3"]{
+  display: none;
+}
+
+#wall .parent #tag-4{
+  display: none;
+}
+
+
+#wall .parent + .parent #tag-5[class="slick"]{
+  display: none;
+}
+
+body div#wall div.parent + div.parent > div + div > div#tag-6{
+  display: none;
+}
+body div#wall div#tag-3 + div.parent + div.parent + div.parent + div.parent > div > div[id="tag-7"][class="slick"]{
+  display: none;
+}
